# arthen-lang

./: .gitignore  ARTHEN_SPEC.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  arthen.config.json  debug_find_aitoken.py  out.json  out_empty.json  out_pretty_hdr.json  out_quiet.json  out_raw.json  out_raw2.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_acceptance.yml  ci.yml  public_ci.yml  release.yml  smoke_binaries.yml  testpypi.yml
compiler/: __init__.py  arthen_compiler.py  arthen_compiler_architecture.py
consensus/: ml_harmony_consensus.arthen
docs/: API.md  CLI.md  DEPRECATION_POLICY.md  GETTING_STARTED.md  HARDENING_GUIDE.md  ICON_VERIFICATION_CHECKLIST.md  INSTALL.md  RELEASE_POLICY.md  SIGNING_AND_NOTARIZATION.md  VERSIONING.md
docs/TUTORIALS/: ethereum.md  foundry.md  solana.md
examples/: ai_governance_system.arthen  ai_nft_marketplace.arthen  ai_oracle_system.arthen  ai_supply_chain.arthen  defi_liquidity_pool.arthen  empty.arthen
examples/ethereum/e2e-minimal/: README.md
examples/solana/e2e-minimal/: README.md
parser/: __init__.py  ai_native_parser.py
scripts/: generate_ethereum_solidity.py  generate_solana_program.py
server/backend/: requirements.txt
server/backend/app/: main.py
server/frontend/: index.html  package.json  tailwind.config.js
server/frontend/src/: App.tsx
stdlib/: __init__.py  arthen_stdlib.arthen  arthen_stdlib_implementation.py
tests/: conftest.py  pytest.ini  test_acceptance_targets.py  test_arthen_comprehensive.py  test_parser_cli.py  test_requirements.txt  test_runner.py
tests/reports/: comprehensive_report.json  integration_tests.html  integration_tests.json  raw_results.json  test_summary.txt  unit_tests.html  unit_tests.json
(+8 files in other folders)
