[metadata]
name = arthen-lang
version = 1.0.0

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    torch>=2.0.0
    transformers>=4.30.0
    web3>=6.10.0
    numpy>=1.24.0
    click>=8.1.0

[options.packages.find]
include =
    compiler
    parser
    stdlib
exclude =
    tests
    examples
    consensus

[options.entry_points]
console_scripts =
    arthen-compile = compiler.arthen_compiler:main
    arthen-stdlib = stdlib.arthen_stdlib_implementation:main
    arthen-parse = parser.ai_native_parser:main